k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recommendation
  labels:
    name: recommendation
    environment: production
